# icon

./: README.rst  pyproject.toml
icon/: __init__.py
