[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Random choice from Google Material Icons in Jupyter notebook"
homepage = "https://github.com/SaitoTsutomu/icon"
license = "Apache-2.0"
name = "icon"
readme = "README.rst"
version = "0.0.5"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^1.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
